--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -22,15 +22,33 @@ body, html {
 }
 
 .logo {
-  height: 85px; 
-  margin: 0; 
+  text-decoration: none;
+  color: #fff;
+  padding: 5px 10px;
+  transition: color 0.3s ease;
+  text-align: center;
+  font-size: 26px;
+  font-weight: bold;
+  transition: color 0.3s ease;
 }
+
+.logodev{
+  background: linear-gradient(90deg, #00c6ff, #0072ff, #4facfe, #00f2fe);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      color: transparent;
+}
+
+  .logo:hover{
+      transform: scale(1.04);
+  }
 
 .nav-links {
   display: flex;
-  gap: 30px;
+  gap: 25px;
   align-items: flex-start;
-  margin-right: 80px;
+  margin-right: 110px;
 }
 
 .nav-links a {
@@ -47,39 +65,85 @@ body, html {
   cursor: pointer;
 }
 
-/* IMAGEN PRINCIPAL */
+/* SIDEBAR */
+.sidebar {
+    position: fixed;
+    height: 25vh;
+    width: 30px;
+    background-color: #242325;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    top: 50%;
+    transform: translateY(-50%); /* truco para centrarla */
+    left: 0;
+    z-index: 9999;
+}
+
+    .icon-left {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      gap: 20px;
+      margin-top: 18px; 
+    }
+
+    .sidebar a{
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      padding: 8px 0;
+      border-radius: 8px;
+      text-decoration: none;
+      cursor: pointer;              /* fuerza el cursor pointer */
+      transition: background-color .18s, transform .08s;
+    }
+
+    .sidebar a:hover{
+      transform: translateY(-2px);
+    }
+
+/* HOME */
 .hero {
-  background-size: cover;
-  background-position: center;
   height: 100vh; 
+  width: 75%;
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
     .hero h1 {
-    font-size: 3rem;
-    margin-bottom: 10px;
-    color: #fff;
+      font-size: 3rem;
+      color: #fff;
+      font-weight: normal;
     }
 
-    .hero-content {
-      background-color: rgba(255,255,255,0.85);
-      padding: 20px 40px;
-      border-radius: 10px;
-      text-align: center;
-      max-width: 80%;
+    .hero h2 {
+      font-size: 2.5rem;
+      color: #fff;
+      font-weight: normal;
     }
 
-.hero-nombre{
-  background: linear-gradient(90deg, #00c6ff, #0072ff, #4facfe, #00f2fe);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  color: transparent;
-}
+    .hero-nombre{
+      background: linear-gradient(90deg, #00c6ff, #0072ff, #4facfe, #00f2fe);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      color: transparent;
+      font-weight: bold;
+      font-size: 4rem;
+    }
+
+    .hero h1, .hero h2, .hero-nombre {
+      margin: 0;              
+      line-height: 1.3; 
+    }
 
 /* ABOUT US SECCION */
 .nosotros-section{
@@ -90,15 +154,13 @@ body, html {
     .nosotros-section h1 {
     margin: 90px auto 20px;
     font-size: 50px;
-    font-family: 'Playfair Display', serif;
-    color: #000000;
+    color: #fff;
     }
 
     .nosotros-section h3 {
         margin: 40px auto 10px;
         font-size: 24px;
-        font-family: 'Libre Baskerville', serif;
-        color: #666666;
+        color: #fff;
     }
 
     .nosotros-section p {
@@ -107,8 +169,7 @@ body, html {
         width: 80%;
         font-size: 1.0625rem;
         font-weight: 600;
-        font-family: 'Libre Baskerville', serif;
-        color: #666666;
+        color: #fff;
     }
 
 /* SECCION DE MENU */
@@ -120,17 +181,15 @@ body, html {
     .menu-section h1 {
       font-size: 50px;
       margin-bottom: 40px;
-      font-family: 'Playfair Display', serif;
       font-weight: 700;
-      color: #000000;
+      color: #fff;
     }
 
     .menu-section h2 {
       font-size: 28px;
       margin-bottom: 30px;
-      font-family: 'Libre Baskerville', serif;
       font-weight: 700;
-      color: #666666;
+      color: #fff;
     }
 
     .menu-carillas {
@@ -168,17 +227,15 @@ body, html {
     .reseñas-section h1 {
       font-size: 50px;
       margin-bottom: 40px;
-      font-family: 'Playfair Display', serif;
       font-weight: 700;
-      color: #000000;
+      color: #fff;
     }
 
     .reseñas-section h2 {
       font-size: 28px;
       margin-bottom: 30px;
-      font-family: 'Libre Baskerville', serif;
       font-weight: 700;
-      color: #666666;
+      color: #fff;
     }
 
     .reseñas{
@@ -220,7 +277,7 @@ body, html {
     .contacto h2{
         text-align: center;
         margin-top: 20px;
-        color: #000000;
+        color: #fff
     }
 
     .contacto img{
@@ -238,7 +295,7 @@ body, html {
     }
 
     .contacto p{
-      color: #000000;
+      color: #fff;
       text-align: center;
       font-size: small;
       font-weight: 700;
@@ -252,9 +309,16 @@ body, html {
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 20px; 
+      gap: 15px; 
       margin-top: 20px;
     }
+
+.borde{
+    width: 80%;
+    height: 3px;
+    background-color: #d3d3d3;
+    margin: 0 auto;
+}
 
 /* SECCION DE DERECHOS */ 
 .resaltado{
