--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -21,6 +21,28 @@ body, html {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
+.nav-links {
+  display: flex;
+  gap: 25px;
+  align-items: flex-start;
+  margin-right: 110px;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: #fff;
+  padding: 5px 10px;
+  transition: color 0.3s ease;
+  font-size: large;
+}
+
+.nav-links a:hover {
+  color: #1595df;
+  transform: scale(1.04);
+  cursor: pointer;
+}
+
+/* LOGO */
 .logo {
   text-decoration: none;
   color: #fff;
@@ -44,27 +66,6 @@ body, html {
       transform: scale(1.04);
   }
 
-.nav-links {
-  display: flex;
-  gap: 25px;
-  align-items: flex-start;
-  margin-right: 110px;
-}
-
-.nav-links a {
-  text-decoration: none;
-  color: #fff;
-  padding: 5px 10px;
-  transition: color 0.3s ease;
-  font-size: large;
-}
-
-.nav-links a:hover {
-  color: #1595df;
-  transform: scale(1.04);
-  cursor: pointer;
-}
-
 /* SIDEBAR */
 .sidebar {
     position: fixed;
@@ -77,7 +78,7 @@ body, html {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     top: 50%;
-    transform: translateY(-50%); /* truco para centrarla */
+    transform: translateY(-50%); 
     left: 0;
     z-index: 9999;
 }
@@ -100,12 +101,13 @@ body, html {
       padding: 8px 0;
       border-radius: 8px;
       text-decoration: none;
-      cursor: pointer;              /* fuerza el cursor pointer */
+      cursor: pointer; 
       transition: background-color .18s, transform .08s;
     }
 
     .sidebar a:hover{
       transform: translateY(-2px);
+      filter: brightness(0) saturate(100%) invert(45%) sepia(93%) saturate(527%) hue-rotate(180deg) brightness(95%) contrast(100%);
     }
 
 /* HOME */
@@ -145,25 +147,25 @@ body, html {
       line-height: 1.3; 
     }
 
-/* ABOUT US SECCION */
-.nosotros-section{
+/* ABOUT ME SECCION */
+.about-section{
     text-align: center;
     scroll-margin-top: 100px;
 }
 
-    .nosotros-section h1 {
+    .about-section h1 {
     margin: 90px auto 20px;
     font-size: 50px;
-    color: #fff;
+    color: #0072ff
     }
 
-    .nosotros-section h3 {
+    .about-section h3 {
         margin: 40px auto 10px;
         font-size: 24px;
-        color: #fff;
+        color: #4facfe;
     }
 
-    .nosotros-section p {
+    .about-section p {
         margin: 1.875rem auto 1.875rem;
         max-width: 50rem;
         width: 80%;
@@ -172,100 +174,47 @@ body, html {
         color: #fff;
     }
 
-/* SECCION DE MENU */
-.menu-section {
+/* SECCION DE TECH STACK */
+.tech-section {
   text-align: center;
   padding: 60px 20px;
 }
 
-    .menu-section h1 {
+    .tech-section h1 {
       font-size: 50px;
       margin-bottom: 40px;
       font-weight: 700;
-      color: #fff;
+      color: #0072ff;
     }
 
-    .menu-section h2 {
+    .tech-section h2 {
       font-size: 28px;
       margin-bottom: 30px;
       font-weight: 700;
-      color: #fff;
+      color: #4facfe;
     }
 
-    .menu-carillas {
-      display: flex;
-      justify-content: center;
-      gap: 80px;
-      flex-wrap: wrap;
-      margin-bottom: 80px;
-    }
 
-    .menu-carillas img {
-      max-width: 100%;
-      width: 550px;
-      height: auto;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      border-radius: 12px;
-      transition: transform 0.2s ease-in-out;
-    }
-
-    .menu-carillas img:hover{
-      transform: scale(1.03);
-      cursor: pointer;
-    }
-
-    .menu-carillas .desayuno {
-      justify-content: center;
-    }
-
-/* SECCION DE RESEÑAS */
-.reseñas-section {
+/* SECCION DE PROYECTOS */
+.projects-section {
   text-align: center;
   padding: 60px 20px;
 }
 
-    .reseñas-section h1 {
+    .projects-section h1 {
       font-size: 50px;
       margin-bottom: 40px;
       font-weight: 700;
-      color: #fff;
+      color: #0072ff;
     }
 
-    .reseñas-section h2 {
+    .projects-section h2 {
       font-size: 28px;
       margin-bottom: 30px;
       font-weight: 700;
-      color: #fff;
+      color: #4facfe;
     }
 
-    .reseñas{
-      width: 700px;
-      margin-left: auto;
-      margin-right: auto;
-      padding: 20px;
-      border-radius: 8px;
-      border: 2px solid #545454;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      margin-top: 50px;
-      transition: transform 0.2s ease-in-out;
-    }
-
-    .reseñas:hover{
-      transform: scale(1.03);
-    }
-
-    .reseñas-texto{
-      color: #FFFFFF;
-      font-style: italic;
-      font-size: 18px;
-      margin-top: 5px;
-    }
-
-    .reseñas-img{
-      justify-content: left;
-      margin-top: 2px;
-      display: flex;
-    }
 
 /* SECCION DE CONTACTO */
 .contacto{
@@ -275,16 +224,7 @@ body, html {
 }
 
     .contacto h2{
-        text-align: center;
-        margin-top: 20px;
-        color: #fff
-    }
-
-    .contacto img{
-        align-items: center;
-        display: inline-block;
-        margin-bottom: 5px;
-        transition: transform 0.2s ease-in-out;
+      color: #0072ff;
     }
 
     .contacto a{
@@ -294,25 +234,34 @@ body, html {
         align-items: center;
     }
 
-    .contacto p{
-      color: #fff;
-      text-align: center;
-      font-size: small;
-      font-weight: 700;
-    }
-
-    .contacto img:hover{
-        transform: scale(1.2);
-    }
-
     .iconos-contacto {
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 15px; 
       margin-top: 20px;
     }
 
+        .iconos-contacto a {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+          width: 50px;   
+          height: 40px;
+        }
+
+        .contacto img {
+          max-width: 90%; 
+          height: auto;
+          transition: transform 0.2s ease-in-out;
+        }
+        
+        .contacto img:hover{
+            transform: scale(1.2);
+            filter: brightness(0) saturate(100%) invert(45%) sepia(93%) saturate(527%) hue-rotate(180deg) brightness(95%) contrast(100%);
+        }
+
+/* SEPARADOR DE CONTACTO */
 .borde{
     width: 80%;
     height: 3px;
