--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -114,7 +114,6 @@ body, html {
 .hero {
   height: 100vh; 
   width: 75%;
-  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -142,6 +141,36 @@ body, html {
       font-size: 4rem;
     }
 
+    .hero-resume a {
+      display: inline-block;       /* Permite que width y height funcionen */
+      text-decoration: none;       /* Quita el subrayado del link */
+      text-align: center;          /* Centrar texto horizontal */
+      line-height: 60px;           /* Centrar texto verticalmente */
+      border-radius: 30px;
+      color: #fff;
+      border: 2px solid #4facfe;   
+      background-color: #17171B;
+      width: 180px;                 
+      font-weight: bold;
+      font-size: 24px;
+      cursor: pointer;
+      transition: 0.3s;  
+      margin-top: 15px;          
+    }
+
+    .hero-resume a:hover {
+      background-color: #4facfe;
+      color: #333;
+      transform: scale(1.04);
+    }
+
+    .hero img{
+      width: 150px;            
+      height: 150px;           
+      border-radius: 50%;      
+      object-fit: cover;
+    }
+
     .hero h1, .hero h2, .hero-nombre {
       margin: 0;              
       line-height: 1.3; 
@@ -150,11 +179,11 @@ body, html {
 /* ABOUT ME SECCION */
 .about-section{
     text-align: center;
-    scroll-margin-top: 100px;
+    scroll-margin-top: 250px;
 }
 
     .about-section h1 {
-    margin: 90px auto 20px;
+    margin: 70px auto 20px;
     font-size: 50px;
     color: #0072ff
     }
@@ -167,11 +196,15 @@ body, html {
 
     .about-section p {
         margin: 1.875rem auto 1.875rem;
-        max-width: 50rem;
+        max-width: 75rem;
         width: 80%;
-        font-size: 1.0625rem;
-        font-weight: 600;
+        font-size: 1.3825rem;
+        font-weight: 300;
         color: #fff;
+    }
+
+    .about-section span{
+      color: #1595df;
     }
 
 /* SECCION DE TECH STACK */
