--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -192,13 +192,13 @@ body, html {
 }
 
     .about-section h1 {
-    margin: 70px auto 20px;
+    margin: 70px auto 10px;
     font-size: 50px;
-    color: #0072ff
+    color: #0072ff;
     }
 
     .about-section h3 {
-        margin: 40px auto 10px;
+        margin: 10px auto 10px;
         font-size: 24px;
         color: #4facfe;
     }
@@ -225,7 +225,7 @@ body, html {
 
     .tech-section h1 {
       font-size: 50px;
-      margin-bottom: 40px;
+      margin-bottom: 10px;
       font-weight: 700;
       color: #0072ff;
     }
@@ -237,6 +237,60 @@ body, html {
       color: #4facfe;
     }
 
+    .tech-logos{
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      row-gap: 0px;
+      column-gap: 10px;
+      width: 80%;
+      place-items: center;
+    }
+
+    .tech-logos img {
+      width: 60px;
+      height: 60px;
+      object-fit: contain;
+      transition: transform 0.2s ease-in-out;
+    }
+
+    .tech-logos img:hover {
+      transform: scale(1.2);
+    }
+
+    .tech-box{
+      display: flex;
+      justify-content: space-evenly;
+      width: 100%;
+      height: 450px;
+      margin: 0;
+      border-radius: 15px;
+      background: linear-gradient(135deg, #23243a, #2a2d4d, #3a3e5c 90%);
+      border: 1px solid #0072ff;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    }
+
+    .tech-container{
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 80px;
+      margin-right: 0;
+    }
+
+    .tech-box-group {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 380px;
+    }
+
+    .tech-texto{
+      text-align: center;
+      color: #fff;
+      font-size: 22px;
+      margin-bottom: 10px; /* Espacio debajo del título */
+    }
 
 /* SECCION DE PROYECTOS */
 .projects-section {
@@ -247,7 +301,7 @@ body, html {
 
     .projects-section h1 {
       font-size: 50px;
-      margin-bottom: 40px;
+      margin-bottom: 10px;
       font-weight: 700;
       color: #0072ff;
     }
